daemoneye-agent/tests/snapshots/cli__daemoneye-agent_log_level.snap
---
source: daemoneye-agent/tests/cli.rs
expression: stdout
---
daemoneye-agent started successfully
