daemoneye-agent/tests/snapshots/cli__daemoneye-agent_missing_database.snap
---
source: daemoneye-agent/tests/cli.rs
expression: stderr.as_ref()
---
Error: Database directory '/tmp/<TEMP>/nonexistent' does not exist
