daemoneye-agent/tests/snapshots/cli__sentinelagent_help.snap
---
source: sentinelagent/tests/cli.rs
expression: stdout
---
SentinelD Detection and Alerting Orchestrator

Usage: sentinelagent [OPTIONS]

Options:
  -d, --database <DATABASE>    Database path [default: /var/lib/sentineld/processes.db]
  -l, --log-level <LOG_LEVEL>  Log level [default: info]
  -h, --help                   Print help
  -V, --version                Print version
